objects/MilestoneSnapshotobj__c.object
<CustomObject>
    <fields>
        <fullName>Atual_ElapseTime__c</fullName>
        <label>Atual ElapseTime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stopped_time__c</fullName>
        <label>Stopped time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>elapse_time__c</fullName>
        <label>elapse time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>MilestoneSnapshotobj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>case number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MilestoneSnapshotobjs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>